# biomed-one

./: README.md
analysis/Logistic_test/: Spo2_aggrv.py  ff361.txt  ff9801.txt  five-day_spo2.txt  logistic_test.py  logistic_test.txt  parameters.txt
analysis/Plot-RR/: RR-70-5.txt  plot-RR.py
analysis/Temperature/: Temperature_model.py  temp_curve_2h.txt  temp_simu_graph.py
analysis/sampl-freq-comparison/: fint-1.txt  fint-2.txt  fint-4.txt  fint-8.txt  sfint-ana.py
esp32/continuous/: continuous.ino  oxymeter.ino  sensors.ino  utilities.h  utilities.ino  webserver.h
esp32/periodic/: MovingAvg.h  MovingAvg.ino  oxymeter.h  periodic.ino  (+2 more)
monitoring/: alert.py  alertmsg.py  db_handler.py  monitoring_system.py  patient.py
simulation/: CMakeLists.txt  Test_simu.py  config.txt  simulation.py  simulation.sln  simulation.vcxproj  simulation.vcxproj.filters
simulation/include/: simulator.h
simulation/python/: simulation.ilk  test1.py
simulation/src/: CMakeLists.txt  config.cpp  config.h  menu.cpp  menu.h  simulator.cpp  simulator.h  temperature.h  typevector.h
simulation/src/database/: main-menu.txt  simu-settings.txt
simulation/src/model/: hr.cpp  hr.h  simulation.cpp  simulation.h  spo2.cpp  spo2.h  temperature.cpp
simulation/src/model/utilities/: fft.h  tools.cpp  tools.h
simulation/src/simulator/: hr.cpp  hr.h  simulation-IBRAHIMA.h  simulation.cpp  simulation.h  simulator.cpp  simulator.h  spo2.cpp
simulation/src/utilities/: fft.cpp
simulation/test/: CMakeLists.txt  simu_testing.cpp
simulation/tests/: interface_testing.cpp  simu_testing.cpp
(+5 files in other folders)
